Hooking up JS, updating to new jekyll reqs

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -16,6 +16,10 @@ header nav {
   display: none;
 }
 
+header nav {
+  backdrop-filter: blur(10px);
+}
+
 footer ul.social-media li {
   display: inline-block;
 }
