--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
   <title>{% if page.meta_title %}{{ page.meta_title | escape }}{% else %}{{ site.title | escape }} | Insights Network{% endif %}</title>
   <meta name="description" content="{% if page.meta_description %}{{ page.meta_description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | prepend: site.baseurl }}">
   <script src="{{ '/assets/js/jquery-3.2.1.min.js' | prepend: site.baseurl }}"></script>
-  <script src="{{ /assets/js/main.js | prepend: site.baseurl }}"></script>
+  <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}"></script>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
