--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,25 +18,28 @@ layout: default
         <a href="#">Download Wallet</a>
       </li>
     </ul>
-    <img src="#" alt="The Insights Wallet" />
-    <a href="#" class="scroll-down"><span>Scroll Down</span></a>
+    <img src="assets/img/hero-wallet.png" alt="The Insights Wallet" class="hero-image" />
+    <a href="#features" class="scroll-down"><span>Scroll Down</span></a>
   </div><!--.wrapper-->
 </div><!--.hero-->
-<div class="features">
+<div class="features" id="features">
   <div class="wrapper">
     <h2>Key Features</h2>
     <div class="feature">
+      <img src="assets/img/features-own-information.png">
       <h3>Own Your Information</h3>
       <p>You choose exactly what information you want to be seen, only you have
         the keys. Your profile information is never shown individually, only in
         aggregate with other participants.</p>
     </div><!--.feature-->
     <div class="feature">
+      <img src="assets/img/features-get-paid.png">
       <h3>Get Paid for Answering Questions</h3>
       <p>Companies and researchers ask questions that you may be eligible to
         answer. When you answer a question, you will earn Insights Network Star Tokens.</p>
     </div><!--.feature-->
     <div class="feature">
+      <img src="assets/img/features-real-time-results.png">
       <h3>See Real-Time Results</h3>
       <p>Get other people’s answer to questions as they are answered. Answers
         will oftentimes have additional insights into interesting demographic trends.</p>
@@ -46,6 +49,7 @@ layout: default
 <div class="wallet">
   <div class="wrapper">
     <h2>Wallet</h2>
+    <img src="assets/img/wallet-screenshots.png" class="wallet-screenshots">
     <div class="wallet-buttons">
       <a href="#" class="button button-linux">Download Linux</a>
       <a href="#" class="button button-mac">Download Mac</a>
@@ -62,6 +66,9 @@ layout: default
       <li>You answer questions</li>
       <li>You get paid</li>
     </ol>
+    <div class="">
+      <img src="assets/img/how-it-works-map.png" class="map">
+    </div><!--.-->
   </div><!--.wrapper-->
 </div><!--.how-it-works-->
 <div class="use-cases">
@@ -93,17 +100,17 @@ layout: default
   <div class="wrapper">
     <h2>Testimonials</h2>
     <div class="testimonial">
-      <img src="#">
+      <img src="assets/img/testimonials-zerohedge.png" class="testimonial-avatar">
       <div class="quote">
         <p>"The Globalist One World Currency Will Look A Lot Like Insights Token"</p>
-        <p>@zerohedge</p>
+        <p><span>@zerohedge</span></p>
       </div>
     </div><!--.testimonial-->
     <div class="testimonial">
-      <img src="#">
+      <img src="assets/img/testimonials-donald-trump.png" class="testimonial-avatar">
       <div class="quote">
         <p>"I'm proud to announce that Insights Network is going to be the new official US Currency. It's really tremendous cyber!"</p>
-        <p>@realDonaldTrump</p>
+        <p><span>@realDonaldTrump</span></p>
       </div>
     </div><!--.testimonial-->
     <a href="#" class="button button-center">See More Testimonials</a>
