--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -2,11 +2,17 @@
   background: #fff;
   border-radius: 6px;
   color: #1a1a1a;
+  display: block;
   font-weight: 600;
   letter-spacing: 1px;
-  padding: 12px 20px;
+  padding: 10px 20px;
   text-align: center;
   text-transform: uppercase;
+  &:hover,
+  &:active {
+    color: #1a1a1a;
+    text-decoration: none;
+  }
 }
 
 .button-outline {
@@ -14,7 +20,16 @@
 }
 
 nav .button a {
-  padding: 12px 50px;
+  color: #222;
+  // padding: 12px 50px;
+  &:hover,
+  &:active {
+    text-decoration: none;
+  }
+}
+
+.wallet-buttons {
+  text-align: center;
 }
 
 .wallet-buttons a {
@@ -42,4 +57,5 @@ nav .button a {
   background-color: transparent;
   border: 1px solid #444;
   color: #fff;
+  text-align: center;
 }
