Some tablet + desktop styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  <div class="wrapper">
-    <p class="copyright hide-mobile">{{ site.title }} &copy; {{ "now" | date: "%Y" }}</p>
+  <div class="wrapper clearfix">
+    <p class="copyright hide-mobile">{{ site.title }} &copy; {{ "now" | date: "%Y" }} &nbsp;&nbsp;&nbsp;&middot;</p>
     <ul class="footer-links">
       <li>
         <a href="#">Wallet</a>
