--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
   </div><!--.wrapper-->
 </div><!--.hero-->
 <div class="features" id="features">
-  <div class="wrapper">
+  <div class="wrapper clearfix">
     <h2>Key Features</h2>
     <div class="feature">
       <img src="assets/img/features-own-information.png">
@@ -72,7 +72,7 @@ layout: default
   </div><!--.wrapper-->
 </div><!--.how-it-works-->
 <div class="use-cases">
-  <div class="wrapper">
+  <div class="wrapper clearfix">
     <h2>Use Cases</h2>
     <div class="use-case">
       <img src="assets/img/icon-market-research.svg">
@@ -99,14 +99,14 @@ layout: default
 <div class="testimonials">
   <div class="wrapper">
     <h2>Testimonials</h2>
-    <div class="testimonial">
+    <div class="testimonial clearfix">
       <img src="assets/img/testimonials-zerohedge.png" class="testimonial-avatar">
       <div class="quote">
         <p>"The Globalist One World Currency Will Look A Lot Like Insights Token"</p>
         <p><span>@zerohedge</span></p>
       </div>
     </div><!--.testimonial-->
-    <div class="testimonial">
+    <div class="testimonial clearfix">
       <img src="assets/img/testimonials-donald-trump.png" class="testimonial-avatar">
       <div class="quote">
         <p>"I'm proud to announce that Insights Network is going to be the new official US Currency. It's really tremendous cyber!"</p>
