--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<header>
+<header class="clearfix">
   <div class="wrapper">
     <a href="{{ site.baseurl }}/" class="logo">Insights Logo</a>
-    <a href="#" class="menu-link"><img src="assets/img/menu.svg"></a>
+    <a href="#" class="menu-link show-mobile"><img src="assets/img/icon-menu.svg"></a>
     <nav>
       <ul>
         <li>
