--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -19,6 +19,10 @@
   border: 1px solid #ddd;
 }
 
+.button-center {
+  margin: 0 auto;
+}
+
 nav .button a {
   color: #222;
   // padding: 12px 50px;
@@ -53,9 +57,28 @@ nav .button a {
   background-image: url("../img/logo-windows.svg");
 }
 
+.use-cases .button {
+  clear: both;
+  max-width: 272px;
+}
+
 .testimonials .button {
   background-color: transparent;
   border: 1px solid #444;
+  clear: both;
   color: #fff;
+  max-width: 220px;
   text-align: center;
+}
+
+@media (min-width: 480px) {
+
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 1024px) {
+
 }
