--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@ layout: default
   </div><!--.wrapper-->
 </div><!--.wallet-->
 <div class="how-it-works">
-  <div class="wrapper">
+  <div class="wrapper clearfix">
     <h2>How It Works</h2>
     <ol>
       <li class="active">Create a Profile</li>
@@ -66,7 +66,7 @@ layout: default
       <li>You answer questions</li>
       <li>You get paid</li>
     </ol>
-    <div class="">
+    <div class="content">
       <img src="assets/img/how-it-works-map.png" class="map">
     </div><!--.-->
   </div><!--.wrapper-->
