Updating text on the correct file

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,9 @@ layout: default
 
 <div class="hero">
   <div class="wrapper">
-    <h2>Decentralized User Data Collection on a Blockchain</h2>
-    <h1>Insights Network is a market research technology where individuals earn
-      money to publish their data while maintaining their anonimity</h1>
+    <h2>Decentralized User Data Collection Using Blockchain Technology</h2>
+    <h1>Insights Network is an incentivized Consumer Data Platform<br />
+      Earn Tokens for Participating while remaining Anonymous</h1>
     <ul class="links">
       <li class="icon-video">
         <a href="#">Watch Video</a>
@@ -42,7 +42,7 @@ layout: default
     <div class="feature">
       <img src="assets/img/features-real-time-results.png">
       <h3>Blockchain Verifiable Results</h3>
-      <p>he future of voting will change forever as all results published can be
+      <p>The future of voting will change forever as all results published can be
       verified via the blockchain. Insights publishes all consumer feedback
       publically so the population can take this valuable data to improve systems,
       shifting the power from private corporations and governments, back to the people.</p>
@@ -86,9 +86,9 @@ layout: default
     <div class="use-case">
       <img src="assets/img/icon-people.svg">
       <h3>Sociology</h3>
-      <p>Each user account is encrypted and data is split, encrypted, and sent
-        across the network. This makes it impossible for any hacker to access your
-        account and download all of your information.</p>
+      <p>Each user account's data is split and distributed across the network.
+      This makes it impossible for any hacker to access your account and download
+      your information</p>
     </div><!--.use-case-->
     <div class="use-case">
       <img src="assets/img/icon-politics.svg">
