Fixing text up a bit

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,8 +5,8 @@ layout: default
 <div class="hero">
   <div class="wrapper">
     <h2>Decentralized User Data Collection Using Blockchain Technology</h2>
-    <h1>Insights Network is an incentivized Consumer Data Platform<br />
-      Earn Tokens for Participating while remaining Anonymous</h1>
+    <h1>Insights Network is an Incentivized Consumer Data Platform<br />
+      Earn Tokens for Participating While Remaining Anonymous</h1>
     <ul class="links">
       <li class="icon-video">
         <a href="#">Watch Video</a>
