--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,8 +5,8 @@ layout: default
 <div class="hero">
   <div class="wrapper">
     <h2>Decentralized User Data Collection Using Blockchain Technology</h2>
-    <h1>Insights Network is an Incentivized Consumer Data Platform<br />
-      Earn Tokens for Participating While Remaining Anonymous</h1>
+    <h1>Insights Network is an Incentivized Consumer Data Platform.<br />
+      Earn Tokens for Participating in Market Research.</h1>
     <ul class="links">
       <li class="icon-video">
         <a href="#">Watch Video</a>
@@ -86,15 +86,18 @@ layout: default
     <div class="use-case">
       <img src="assets/img/icon-people.svg">
       <h3>Sociology</h3>
-      <p>Each user account's data is split and distributed across the network.
-      This makes it impossible for any hacker to access your account and download
-      your information</p>
+      <p>Social scientists can identify populations by demographics
+      and geography. It spares researchers from having to recruit study
+      participants; their target population becomes available instantly by
+      request, enabled by tokens and smart contracts.</p>
     </div><!--.use-case-->
     <div class="use-case">
       <img src="assets/img/icon-politics.svg">
       <h3>Political Campaigns</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In efficitur
-        velit nec eleifend fermentum. Sed tempus et neque eu hendrerit.</p>
+      <p>complete transparency and ability for anyone holding tokens to take the
+      temperature of the political climate, whether its calculating approval
+      ratings broken down by demographics, facilitating and validating votes in
+      real-world elections, or forecasting outcomes of upcoming votes or elections.</p>
     </div><!--.use-case-->
     <a href="#" class="button button-outline button-center">Development Documentation</a>
   </div><!--.wrapper-->
