Updating the colors to purple and adding stars ✨

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -101,23 +101,40 @@ layout: default
     <a href="#" class="button button-outline button-center">Development Documentation</a>
   </div><!--.wrapper-->
 </div><!--.use-cases-->
-<div class="testimonials">
+<div class="team">
   <div class="wrapper">
-    <h2>Testimonials</h2>
-    <div class="testimonial clearfix">
+    <h2>Team</h2>
+    <div class="member clearfix">
       <img src="assets/img/testimonials-zerohedge.png" class="testimonial-avatar">
-      <div class="quote">
-        <p>"The Globalist One World Currency Will Look A Lot Like Insights Token"</p>
-        <p><span>@zerohedge</span></p>
+      <div class="bio">
+        <h3>Brian Gallagher</h3>
+        <h4>CEO</h4>
+        <p>Extensive experience co-founding and scaling startups from zero revenue to seven figure revenue, building teams and hiring hundreds of employees. W.P. Carey School of Business and Y-Combinator Alumni. Invested in Cryptocurrencies since 2011.</p>
       </div>
-    </div><!--.testimonial-->
-    <div class="testimonial clearfix">
+    </div><!--.member-->
+    <div class="member clearfix">
       <img src="assets/img/testimonials-donald-trump.png" class="testimonial-avatar">
-      <div class="quote">
-        <p>"I'm proud to announce that Insights Network is going to be the new official US Currency. It's really tremendous cyber!"</p>
-        <p><span>@realDonaldTrump</span></p>
+      <div class="bio">
+        <h3>Brandan Zaucha</h3>
+        <h4>Business Development, Community Experience</h4>
+        <p>Community Management and Growth enthusiast. Arizona State University and Y Combinator Alumni. Co-Founder Gambeal.com, a consumer data collection application that is part of the Insights Network.</p>
       </div>
-    </div><!--.testimonial-->
-    <a href="#" class="button button-center">See More Testimonials</a>
+    </div><!--.member-->
+    <div class="member clearfix">
+      <img src="assets/img/testimonials-donald-trump.png" class="testimonial-avatar">
+      <div class="bio">
+        <h3>Darwin Lo</h3>
+        <h4>Title</h4>
+        <p>Y Combinator Alumni. Stanford Computer Science B.S. Part of the field of PL (programming languages) -- which includes the design and implementation of programming languages and the analysis and verification of programs.</p>
+      </div>
+    </div><!--.member-->
+    <div class="member clearfix">
+      <img src="assets/img/testimonials-donald-trump.png" class="testimonial-avatar">
+      <div class="bio">
+        <h3>Darwin Stanford</h3>
+        <h4>Title</h4>
+        <p>Y Combinator Alumni. Computer Science B.S. at Stanford. Part of the field of PL (programming languages) -- which includes the design and implementation of programming languages and the analysis and verification of programs.</p>
+      </div>
+    </div><!--.member-->
   </div><!--.wrapper-->
-</div><!--.testimonials-->
+</div><!--.team-->
